force-app/main/default/objects/SPEN_ImpactedPremise__c/SPEN_ImpactedPremise__c.object-meta.xml
<CustomObject>
    <label>Impacted Premise</label>
    <nameField>
        <displayFormat>IP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impacted Premises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>