force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_ContactPremise__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContactPremise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Premise</label>
    <referenceTo>SPEN_ContactPremise__c</referenceTo>
    <relationshipLabel>Impacted Premises</relationshipLabel>
    <relationshipName>Impacted_Premises</relationshipName>
    <type>Lookup</type>
</CustomField>