force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_CustomerMobileNumberFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerMobileNumberFormula__c</fullName>
    <formula>SPEN_ContactPremise__r.SPEN_RelatedContactMobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Mobile Number</label>
    <type>Text</type>
</CustomField>