force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_CustomerOtherPhoneFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerOtherPhoneFormula__c</fullName>
    <formula>SPEN_ContactPremise__r.SPEN_RelatedContact__r.OtherPhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Other Phone Formula</label>
    <type>Text</type>
</CustomField>