force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_CustomerTelephoneNumberFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerTelephoneNumberFormula__c</fullName>
    <description>Related Contact&apos;s Telephone Number</description>
    <formula>SPEN_ContactPremise__r.SPEN_RelatedContact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Telephone Number</label>
    <type>Text</type>
</CustomField>