force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_Dispatched_Date__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Dispatched_Date__c</fullName>
    <label>Dispatched Date</label>
    <type>DateTime</type>
</CustomField>