force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_DroppedSupplyWithNoticeFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DroppedSupplyWithNoticeFormula__c</fullName>
    <formula>SPEN_RelatedIncident__r.SPEN_droppedsupply__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dropped Supply With Notice</label>
    <type>Checkbox</type>
</CustomField>