force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_DroppedSupplyWithoutNoticeFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DroppedSupplyWithoutNoticeFormula__c</fullName>
    <formula>SPEN_RelatedIncident__r.SPEN_DroppedSupplyWithoutNotice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dropped Supply Without Notice</label>
    <type>Checkbox</type>
</CustomField>