force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_Estimated_Restoration_Time__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Estimated_Restoration_Time__c</fullName>
    <label>Estimated Restoration Time</label>
    <type>DateTime</type>
</CustomField>