force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_ETA__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ETA__c</fullName>
    <label>ETA</label>
    <type>DateTime</type>
</CustomField>