force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_ETRChangeTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ETRChangeTime__c</fullName>
    <label>ETRChangeTime</label>
    <type>DateTime</type>
</CustomField>