force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ExternalId__c</fullName>
    <description>It should be Combination of Incident and Premise</description>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>