force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_INCETRChangeTimeFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_INCETRChangeTimeFormula__c</fullName>
    <formula>SPEN_RelatedIncident__r.SPEN_ETRChangeTime__c</formula>
    <label>INC ETRChangeTime</label>
    <type>DateTime</type>
</CustomField>