force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_Incident_Status__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Incident_Status__c</fullName>
    <label>Incident Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Delog</fullName>
            </value>
            <value>
                <fullName>Reports OS</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Pre-arranged</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending Merge</fullName>
            </value>
            <value>
                <fullName>Pending Cancel</fullName>
            </value>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>To Be Merged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>