force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_IncidentId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IncidentId__c</fullName>
    <label>IncidentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>