force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_IncidentType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IncidentType__c</fullName>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SP</fullName>
                <label>Single Premise Incident</label>
            </value>
            <value>
                <fullName>LV</fullName>
                <label>Low Voltage Incident</label>
            </value>
            <value>
                <fullName>HV_S</fullName>
                <label>High Voltage Incident</label>
            </value>
            <value>
                <fullName>HV_N</fullName>
                <label>High Voltage Network Incident</label>
            </value>
            <value>
                <fullName>CG</fullName>
                <label>Call Group Incident</label>
            </value>
            <value>
                <fullName>AREA</fullName>
                <label>Area Incident</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>