force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_INCUpgrade__c.field-meta.xml
<CustomField>
    <fullName>SPEN_INCUpgrade__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <formula>SPEN_RelatedIncident__r.SPEN_isUpgrade__c</formula>
    <label>INC Upgrade</label>
    <type>Checkbox</type>
</CustomField>