force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_isCalledIn__c.field-meta.xml
<CustomField>
    <fullName>SPEN_isCalledIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are there any cases under this INC for the mentioned premise</description>
    <label>isCalledIn</label>
    <type>Checkbox</type>
</CustomField>