force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_IsETRChange__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsETRChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsETRChange</label>
    <type>Checkbox</type>
</CustomField>