force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_isMerged__c.field-meta.xml
<CustomField>
    <fullName>SPEN_isMerged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMerged</label>
    <type>Checkbox</type>
</CustomField>