force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_MedicallyDependent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MedicallyDependent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When the Premise has any Specific Vulnerability then this field will be checked</inlineHelpText>
    <label>Medically Dependent</label>
    <type>Checkbox</type>
</CustomField>