force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_MergeDateTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MergeDateTime__c</fullName>
    <label>MergeDateTime</label>
    <type>DateTime</type>
</CustomField>