force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_Name__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Name__c</fullName>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>