force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_OtherPSR__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OtherPSR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other PSR</label>
    <type>Checkbox</type>
</CustomField>