force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_OutComfortHoursFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OutComfortHoursFormula__c</fullName>
    <formula>If(((NOW() - SPEN_RelatedIncident__r.SPEN_LastCommunicationTime__c)*24)&gt;3,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OutComfortHours</label>
    <type>Checkbox</type>
</CustomField>