force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_PreferredMethodofContactFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PreferredMethodofContactFormula__c</fullName>
    <description>Preferred Method of Contact from Contact Object</description>
    <formula>Text(SPEN_ContactPremise__r.SPEN_RelatedContact__r.SPEN_PreferredMethodofContact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Method of Contact</label>
    <type>Text</type>
</CustomField>