force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_Premise_Local_Authority__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Premise_Local_Authority__c</fullName>
    <description>CRMD-9191</description>
    <formula>SPEN_ContactPremise__r.SPEN_Premise__r.Local_Authority__c</formula>
    <label>Premise Local Authority</label>
    <type>Text</type>
</CustomField>