force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_PremiseId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremiseId__c</fullName>
    <externalId>true</externalId>
    <label>PremiseId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>