force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_PreviousStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PreviousStatus__c</fullName>
    <description>this stores current status, old map value will be take for the previous status</description>
    <label>Previous Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>