force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_PSRCheckFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PSRCheckFormula__c</fullName>
    <formula>SPEN_ContactPremise__r.SPEN_RelatedContact__r.SPEN_PSR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSR Check</label>
    <type>Checkbox</type>
</CustomField>