force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_PSRType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PSRType__c</fullName>
    <label>PSR Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSR</fullName>
            </value>
            <value>
                <fullName>Other PSR</fullName>
            </value>
            <value>
                <fullName>No PSR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>