force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedContact__c</fullName>
    <formula>SPEN_ContactPremise__r.SPEN_RelatedContact__c</formula>
    <label>RelatedContact</label>
    <type>Text</type>
</CustomField>