force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_RelatedCustomerFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedCustomerFormula__c</fullName>
    <formula>SPEN_ContactPremise__r.SPEN_RelatedContact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Customer</label>
    <type>Text</type>
</CustomField>