force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_RelatedIncident__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedIncident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Incident</label>
    <referenceTo>Incident</referenceTo>
    <relationshipLabel>Impacted Premises</relationshipLabel>
    <relationshipName>Impacted_Premises</relationshipName>
    <type>Lookup</type>
</CustomField>