force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_RelatedIncidentStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedIncidentStatus__c</fullName>
    <formula>TEXT(SPEN_RelatedIncident__r.SPEN_IncidentStatus__c)</formula>
    <label>Related Incident Status</label>
    <type>Text</type>
</CustomField>