force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_ResourceArrivalDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ResourceArrivalDate__c</fullName>
    <label>Resource Arrival Date</label>
    <type>DateTime</type>
</CustomField>