force-app/main/default/objects/SPEN_ImpactedPremise__c/fields/SPEN_ResourceID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ResourceID__c</fullName>
    <label>ResourceID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>